--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+        <li data-ns-test="shoppingList">Ear buds</li>
+        <li data-ns-test="shoppingList">home</li>
+        <li data-ns-test="shoppingList">car</li>
+    </ol>
+    <ul>
+        <li data-ns-test="holidayList">Goa</li>
+        <li data-ns-test="holidayList">Japan</li>
+        <li data-ns-test="holidayList">Singapore</li>
+
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
